fixed input on ios device so that it would have a border so visually available.

--- a/public/assets/css/tkgreen/main.css
+++ b/public/assets/css/tkgreen/main.css
@@ -846,7 +846,7 @@ a:hover, a:focus {
   grid-column: -2/-1;
 }
 .text__element figure img {
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+  box-shadow: 0px 0px 20px rgba(26, 26, 26, 0.15);
 }
 .text__element figure figcaption {
   font-weight: 300;
@@ -879,7 +879,7 @@ a:hover, a:focus {
 
 .section--galleryBlock img {
   border-radius: 7px;
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+  box-shadow: 0px 0px 20px rgba(26, 26, 26, 0.15);
   height: 250px;
   width: 100%;
   object-fit: cover;
@@ -916,12 +916,19 @@ a:hover, a:focus {
 .contact-form textarea {
   padding: 0.5em;
   width: 100%;
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+  box-shadow: 0px 0px 20px rgba(26, 26, 26, 0.15);
   background-color: hsl(100deg, 0%, 98%);
   border-radius: 7px;
   border: none;
   grid-column: 2/3;
   transition: all 125ms ease-in-out;
+}
+@supports (-webkit-touch-callout: none) {
+  .contact-form input[type=text],
+  .contact-form input[type=email],
+  .contact-form textarea {
+    border: solid 1px hsl(100deg, 0%, 60%);
+  }
 }
 .contact-form input[type=text]:focus,
 .contact-form input[type=email]:focus,
@@ -933,7 +940,7 @@ a:hover, a:focus {
   padding: 1em;
   font-weight: 400;
   border-radius: 7px;
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+  box-shadow: 0px 0px 20px rgba(26, 26, 26, 0.15);
   font-size: 1.3rem !important;
   border: solid #036670 0.05em;
   grid-column: 1/-1;
@@ -949,7 +956,7 @@ a:hover, a:focus {
   margin-block-start: 1.5em;
   margin-block-end: 1em;
   border-radius: 7px;
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+  box-shadow: 0px 0px 20px rgba(26, 26, 26, 0.15);
   background-color: hsl(100deg, 0%, 98%);
   align-self: start;
 }
@@ -969,7 +976,7 @@ a:hover, a:focus {
   aspect-ratio: 1/1;
   object-fit: cover;
   border-radius: 7px;
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+  box-shadow: 0px 0px 20px rgba(26, 26, 26, 0.15);
 }
 .imageElement .element__content {
   margin-block-start: 1em;
@@ -984,7 +991,7 @@ a:hover, a:focus {
 }
 .cards .card {
   background-color: hsl(100deg, 0%, 98%);
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+  box-shadow: 0px 0px 20px rgba(26, 26, 26, 0.15);
   display: grid;
   gap: 1em;
 }
@@ -1015,7 +1022,7 @@ a:hover, a:focus {
 
 .slider__track-container {
   border-radius: 7px;
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+  box-shadow: 0px 0px 20px rgba(26, 26, 26, 0.15);
   position: relative;
   overflow: hidden;
 }
@@ -1101,7 +1108,7 @@ a:hover, a:focus {
   border-bottom-width: 4px;
   border-bottom-style: solid;
   border-bottom-color: rgba(181, 23, 0, 0.75);
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+  box-shadow: 0px 0px 20px rgba(26, 26, 26, 0.15);
   border-radius: 7px;
   display: flex;
   gap: 1em;
@@ -1143,7 +1150,7 @@ a:hover, a:focus {
 }
 
 details {
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+  box-shadow: 0px 0px 20px rgba(26, 26, 26, 0.15);
   border-radius: 7px;
   position: relative;
 }
