--- a/structure/sass/tkgreen/abstracts/_theme.scss
+++ b/structure/sass/tkgreen/abstracts/_theme.scss
@@ -51,8 +51,7 @@ $ls    : 2px;
 // default spacer
 $spacer: 1em;
 // box shadow(s)
-
-$bs: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+$bs: 0px 0px 20px rgba($neutral-5, 0.15);
 
 // Font Variables
 
